# mct

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: update_bottle_formula.py  update_homebrew_formula.py
src/mct/: __init__.py  cli.py  config.py  defaults.py
src/mct/commands/: dock.py  finder.py  keyboard.py  screenshot.py
